2005-02-21  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.cpp, Mercator/Segment.h: Remove obsolete unused
	  vertex cache code.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* mercator.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

2004-08-05  Al Riddoch  <alriddoch@zepler.org>

	* tests/testIntersect.cpp: Fix equality test in the tests and
	  add a commenting explaining why.

	* Commit configure.ac changes for the 0.2.1 release.
	  Actual 0.2.1 release date was 2004-07-21.

2004-08-05  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Forest.cpp, Mercator/Forest.h, Mercator/Matrix.h,
	  Mercator/Plant.h, Mercator/Segment.cpp, Mercator/Segment.h,
	  Mercator/Shader.cpp, Mercator/Shader.h, Mercator/Terrain.cpp,
	  Mercator/Terrain.h: Some minor API tweaks and cleanups.

	* tests/main.cpp, tests/testShader.cpp: Update tests to take
	  account of API changes.

2004-06-07  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/TerrainMod_impl.h: Fixes to work with gcc 3.4 stricter
	  template compiler thanks to Erik Hjortsberg.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Fix devel dependencies in rpm spec.

2004-06-05  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/Segment.h: Add method to set min and max at creation time.

	* Mercator/Terrain.cpp: When creating a new segment, set its
	  min and max to the min and max height of the BasePoints.

2004-06-03  James Turner  <james@worldforge.org>

	* XCode project updates

2004-06-03  Al Riddoch  <alriddoch@zepler.org>

	* Mercator/iround.h, Mercator/DepthShader.cpp, Mercator/Forest.cpp,
	  Mercator/Segment.cpp, Mercator/Terrain.cpp: Clean up use of the
	  I_ROUND macro by moving its definition into a build only header.

	* Mercator/Segment.cpp: Ensure floats are used not doubles in
	  calculations, and use the float version of libm calls where
	  apropriate.

2004-05-18  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.2.0, interface version 1.0.0
